product image preview while adding

--- a/views/admin/coupon-list.ejs
+++ b/views/admin/coupon-list.ejs
@@ -8,7 +8,7 @@
 <main>
 
 <section class="py-1 bg-blueGray-50">
-<div class="w-5/6 mb-12 xl:mb-0 px-1 mt-16">
+<div class="mb-12 xl:mb-0 px-1 mt-16">
   <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded ">
     <div class="rounded-t mb-0 px-1 border-0">
       <div class="flex flex-wrap items-center">
