--- a/views/admin/category-list.ejs
+++ b/views/admin/category-list.ejs
@@ -3,7 +3,7 @@
 <main>
 
 
-<section class="py-1 bg-blueGray-50 w-4/5">
+<section class="py-1 bg-blueGray-50">
 <div class="w-full mb-12 xl:mb-0 px-2 mt-16">
   <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded ">
     <div class="rounded-t mb-0 px-4 border-0">
