--- a/views/admin/product-edit.ejs
+++ b/views/admin/product-edit.ejs
@@ -11,41 +11,26 @@
                   <input value="<%= products[0].productName %>"  type="text" name="productName" id="prodcutName" autocomplete="given-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
               </div>
+
               <div class="sm:col-span-3">
                 <label for="productImage" class="block text-sm font-medium leading-6 text-gray-900">Product Image</label>
                 <div class="mt-2">
-                  <input type="file" value="<%= products[0].productImage[0] %>" name="productImage" id="productImage" accept="image/*" multiple autocomplete="family-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" onchange="previewImages(event)">
-                  <div id="imagePreview" class="mt-2"></div>
-<div id="imagePreview" class="mt-2">
-<% if (products[0].productImage.length > 0) { %>
-    <% products[0].productImage.forEach(image => { %>
-        <div class="relative inline-block">
-            <img src="/product_images/<%= image %>" alt="Product Image" class="w-32 h-32 object-cover mr-2 mb-2">
-            <button onclick="removeImage('<%= image %>')" class="absolute top-0 right-0 bg-red-500 text-white rounded-full h-6 w-6 flex items-center justify-center focus:outline-none hover:bg-red-600">X</button>
-        </div>
-    <% }) %>
-<% } %>
-
-
+                
+                  <input type="file" value="<%= products[0].productImage[0] %>"  id="files" name="files[]" multiple name="productImage" id="productImage" accept="image/*" multiple autocomplete="family-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"">
                 </div>
               </div>
       
               <div class="sm:col-span-3">
-             
                 <label for="category" class="block text-sm font-medium leading-6 text-gray-900">Category</label>
-               
                 <div class="mt-2">
                   <select id="category" name="category" autocomplete="category-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
                     <option class="text-gray-900" ><%= products[0].category %></option>
                     <% products[1].forEach(category => { %>
                     <option class="text-gray-900" ><%= category.categoryName %></option>
-                 
                     <% }) %>
                   </select>
                 </div>
-               
               </div>
-
       
               <div class="sm:col-span-4">
                 <label for="description" class="block text-sm font-medium leading-6 text-gray-900">Description</label>
@@ -53,53 +38,51 @@
                   <input value="<%= products[0].description %>"  id="description" name="description" type="text" autocomplete="description" class="block w-full border-0 py-16 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
               </div>
+
               <div class="sm:col-span-4">
                 <label for="brand" class="block text-sm font-medium leading-6 text-gray-900">Brand</label>
                 <div class="mt-2">
                   <input value="<%= products[0].brand %>"  id="brand" name="brand" type="text" autocomplete="description" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
               </div>
+
               <div class="sm:col-span-4">
                 <label for="color" class="block text-sm font-medium leading-6 text-gray-900">Color</label>
                 <div class="mt-2">
                   <input value="<%= products[0].color %>"  id="color" name="color" type="text" autocomplete="color" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
               </div>
+
               <div class="sm:col-span-4">
                 <label for="price" class="block text-sm font-medium leading-6 text-gray-900">Price</label>
                 <div class="mt-2">
                   <input value="<%= products[0].price %>"  id="price" name="price" type="number" autocomplete="price" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
               </div>
+
               <div class="sm:col-span-4">
                 <label for="size" class="block text-sm font-medium leading-6 text-gray-900">Size</label>
                 <div class="mt-2">
                   <input value="<%= products[0].size %>"  id="size" name="size" type="number" autocomplete="size" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
               </div>
+
               <div class="sm:col-span-4">
                 <label for="stock" class="block text-sm font-medium leading-6 text-gray-900">Stock</label>
                 <div class="mt-2">
                   <input value="<%= products[0].stock %>"  id="stock" name="stock" type="number" autocomplete="stock" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
               </div>
-              <div class="sm:col-span-4">
 
+              <div class="sm:col-span-4">
                 <label for="extras" class="block text-sm font-medium leading-6 text-gray-900">Extras</label>
                 <select id="extras" name="extras" autocomplete="extras-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
                   <option class="text-gray-900" ><%= products[0].extras %></option>
-              
                   <option class="text-gray-900" >New Arrivals</option>
                   <option class="text-gray-900" >Trending</option>
                   <option class="text-gray-900" >Best Seller</option>
-               
-              
-                </select>
-
-
-
-        </div>
-      
+               </select>
+          </div>
         <button type="submit" class="mt-5 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-yellow-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
             Update 
         </button>
@@ -111,46 +94,12 @@
 <script src="https://unpkg.com/@popperjs/core@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-
-<div class="sm:col-span-3">
-    <label for="productImage" class="block text-sm font-medium leading-6 text-gray-900">Product Image</label>
-    <div class="mt-2">
-      <input type="file" name="productImage" id="productImage" accept="image/*" multiple autocomplete="family-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" onchange="previewImages(event)">
-      <div id="imagePreview" class="mt-2"></div>
-    </div>
-  </div>
   
   <script>
-    function previewImages(event) {
-      const previewContainer = document.getElementById('imagePreview');
-      previewContainer.innerHTML = '';
-  
-      const files = event.target.files;
-      if (files) {
-        for (let i = 0; i < files.length; i++) {
-          const file = files[i];
-          const reader = new FileReader();
-  
-          reader.onload = function (e) {
-            const image = document.createElement('img');
-            const closeButton = document.createElement('button');
-            closeButton.innerHTML = 'Remove';
-            closeButton.classList.add('text-red-500', 'hover:text-red-700', 'cursor-pointer', 'ml-2');
-            closeButton.addEventListener('click', function () {
-              previewContainer.removeChild(image);
-              previewContainer.removeChild(closeButton);
-            });
-  
-            image.src = e.target.result;
-            image.classList.add('w-20', 'h-20', 'object-cover', 'rounded-md', 'mr-2', 'mb-2');
-            previewContainer.appendChild(image);
-            previewContainer.appendChild(closeButton);
-          };
-  
-          reader.readAsDataURL(file);
-        }
-      }
-    }
+
+    
+
+
   </script>
   
 <%- include('../partials/adminFooter') %>
