--- a/views/user/wallet.ejs
+++ b/views/user/wallet.ejs
@@ -5,12 +5,13 @@
     <%- include('../partials/userProfileSidebar') %>
 </section>
 
-<section class="antialiased bg-white text-gray-600 h-screen mr-auto mx-auto mt-12 p-40">
+<div class="flex flex-col pr-96">
+
+<section class=" text-gray-600 mt-12 p-16">
   <div class="flex flex-col h-full">
-      <!------------------- Table -------------------->
-      <div class="w-full mx-auto bg-white shadow-lg rounded-sm border border-gray-200">
+      <div class="w-full mx-auto  bg-gray-800 shadow-lg rounded-sm border border-gray-200">
           <header class="px-5 py-4 border-b border-gray-100">
-              <h2 class="font-semibold text-gray-800">Wallet</h2>
+              <h2 class="font-semibold text-white">Wallet</h2>
           </header>
           <div class="p-3">
               <div class="overflow-x-auto">
@@ -23,9 +24,6 @@
                               <th class="pl-24 whitespace-nowrap">
                                   <div class="font-semibold text-left">Balance</div>
                               </th>
-                              <!-- <th class="pl-24 pr-24 whitespace-nowrap">
-                                  <div class="font-semibold text-left">Transactions</div>
-                              </th> -->
                           </tr>
                       </thead>
                       <tbody class="text-sm divide-y divide-gray-100">
@@ -45,10 +43,6 @@
                                     <div class="text-left font-medium text-green-500"> 0₹ </div>
                                 </td>
                                 <% } %>
-                           
-                              <!-- <td class="pl-24 pt-5 whitespace-nowrap">
-                                  <div class="text-left font-medium text-green-500">#7823792hsfd</div>
-                              </td> -->
                           </tr>
                       </tbody>
                   </table>
@@ -57,9 +51,56 @@
       </div>
   </div>
 </section>
-<ssection>
-  
-</ssection>
+
+<!------------------------- Transaction -------------------->
+   <section class="bg-stone-400">
+            <header class="px-5 py-4 border-b border-gray-100">
+                <h2 class="font-semibold text-gray-950">Transactions</h2>
+            </header>
+                    <table class="table-auto w-full">
+                        <thead class="text-xs font-semibold uppercase text-gray-400 bg-gray-100 h-8">
+                            <tr class="">
+                                <th class="pl-24 whitespace-nowrap">
+                                    <div class="font-semibold text-left">Transaction Id</div>
+                                </th>
+                                <th class="pl-24 whitespace-nowrap">
+                                    <div class="font-semibold text-left">Discount Price</div>
+                                </th>
+                                <th class="pl-24 whitespace-nowrap">
+                                    <div class="font-semibold text-left">Date</div>
+                                </th>
+                                <th class="pl-24 whitespace-nowrap">
+                                    <div class="font-semibold text-left">Total Amount</div>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody class="text-sm divide-y divide-gray-100">
+                            
+                            <%  orders.forEach(order => { %>
+                                <tr>
+                                  <td class="pl-24 pt-5 whitespace-nowrap">
+                                      <div class="text-left font-thin text-gray-950"> <%= order.ordId %> </div>
+                                  </td>
+                                  <td class="pl-24 pt-5 whitespace-nowrap">
+                                      <div class="text-left font-thin text-gray-950"> <%= order.discountPrice %> </div>
+                                  </td>
+                                  <td class="pl-24 pt-5 whitespace-nowrap">
+                                      <div class="text-left font-thin text-gray-950">
+                                        <% var createDate = new Date(order.createdate), date = createDate.toLocaleDateString(); %>
+                                        <p><%= date %></p>
+                                     </div>
+                                  </td>
+                                  <td class="pl-24 pt-5 whitespace-nowrap">
+                                      <div class="text-left font-thin text-gray-950"> <%= order.total %>₹ </div>
+                                  </td>
+                                <% }) %>
+                            </tr>
+                        </tbody>
+                    </table>
+       
+  </section>
+
+</div>
 </main>
 
 <%- include('../partials/footer') %>
