coupon deletion done

--- a/views/admin/coupon-list.ejs
+++ b/views/admin/coupon-list.ejs
@@ -68,8 +68,7 @@
               <%= formattedDate %>
           </td>
             <td class="border-t-0 px-2 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap py-3">
-              <!-- <a href="/admin/deleteCoupon/ <%= coup.id %>"> Delete</a> -->
-              Delete
+              <a href="/admin/deleteCoupon/<%= coup.id %>"> Delete</a>
             </td>
           </tr>
         <% }) %>
