--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -101,29 +101,6 @@
               </div>
         </div>
 
-            <!---------------- Sorting orders ---------------->
-<!-- <section class="flex justify-end items-end">
-  <div class="relative">
-    <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="mt-12 text-gray-950 h-9 w-44 border border-gray-950 bg-gray-500  focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 inline-flex dark:bg-gray-50 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-blue-800 justify-center" type="button" onclick="toggleDropdown()">
-      <span class="flex items-center font-thin">Select By</span>
-      <svg class="w-2.5 h-2.5 mt-2 ml-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
-    </button>
-    <div id="dropdown" class="absolute right-0 z-10 hidden bg-white divide-y divide-gray-100 shadow w-44 dark:bg-gray-100 text-gray-950">
-      <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
-        <li>
-          <a href="/admin/sortDashboard/topTenPrdt" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Top 10 Proudcts</a>
-        </li>
-        <li>
-          <a href="/admin/sortDashboard/topTenCtgry" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" >Top 10 Categories</a>
-        </li>
-        <li>
-          <a href="/admin/sortDashboard/topTenBrnd" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" >Top 10 Brands</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</section> -->
-
 
 <section class="pb-28 w-3/3 pt-12">
   <div class="text-center">
@@ -133,7 +110,7 @@
     <table class="items-center bg-transparent border-collapse w-full">
       <thead>
         <tr>
-          <th class=" bg-green-700 text-white text-center align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold">
+          <th class=" bg-gray-700 text-white text-center align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold">
             Product Name</th></tr>
       </thead>
       <tbody>
@@ -149,14 +126,14 @@
     <table class="items-center bg-transparent border-collapse w-full">
       <thead>
         <tr>
-          <th class=" bg-green-700 text-white text-center align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold">
+          <th class=" bg-gray-700 text-white text-center align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold">
             Category Name</th></tr>
       </thead>
       <tbody>
         <tr class="flex flex-col">
           <% list[4].forEach(pro => { %>
           <td class="border-t-0 py-2 align-middle text-xs whitespace-nowrap text-center font-semibold border border-gray-900">
-             <%= pro.category %><% }) %>
+             <%= pro._id %> <% }) %>
       </tr>
       </tbody>
     </table>
@@ -164,7 +141,7 @@
     <table class="items-center bg-transparent border-collapse w-full">
       <thead>
         <tr>
-          <th class=" bg-green-700 text-white text-center align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold">
+          <th class=" bg-gray-700 text-white text-center align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold">
             Brand Name</th>
            </tr>
       </thead>
