--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -239,7 +239,7 @@
                     <a href="#" class="hover:underline  sono-regular text-xs">Contact Us</a>
                 </li>
                 <li class="mb-4">
-                    <a href="#" class="hover:underline  sono-regular text-xs">FAQ1</a>
+                    <a href="/faq" class="hover:underline  sono-regular text-xs">FAQ1</a>
                 </li>
                 <li class="mb-4">
                     <a href="#" class="hover:underline  sono-regular text-xs">FAQ2</a>
