about us crated

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -233,7 +233,7 @@
             <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-gray-950">About</h2>
             <ul class="dark:text-gray-700 font-medium">
                 <li class="mb-4">
-                    <a href="#" class=" hover:underline  sono-regular text-xs">About Us</a>
+                    <a href="/aboutUs" class=" hover:underline  sono-regular text-xs">About Us</a>
                 </li>
                 <li class="mb-4">
                     <a href="#" class="hover:underline  sono-regular text-xs">Contact Us</a>
