--- a/helpers/aboutUs.ejs
+++ b/helpers/aboutUs.ejs
@@ -1,10 +1,10 @@
 <%- include('../partials/header') %>
 
 <main>
-    <section class="bg-white dark:bg-gray-900">
+    <section class="bg-stone-300 p-28">
         <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
-            <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
-                <h2 class="mb-4 text-4xl tracking-tight font-bold text-gray-900 dark:text-white">Powering innovation at <span class="font-extrabold">200,000+</span> companies worldwide</h2>
+            <div class="max-w-screen-lg text-gray-500 sm:text-lg ">
+                <h2 class="mb-4 text-4xl tracking-tight font-bold text-gray-900 ">OneCart created history from  <span class="font-extrabold">200,000+</span> companies worldwide</h2>
                 <p class="mb-4 font-light">Track work across the enterprise through an open, collaborative platform. Link issues across Jira and ingest data from other software development tools, so your IT support and operations teams have richer contextual information to rapidly respond to requests, incidents, and changes.</p>
                 <p class="mb-4 font-medium">Deliver great service experiences fast - without the complexity of traditional ITSM solutions.Accelerate critical development work, eliminate toil, and deploy changes with ease.</p>
                 <a href="#" class="inline-flex items-center font-medium text-primary-600 hover:text-primary-800 dark:text-primary-500 dark:hover:text-primary-700">
