--- a/helpers/faq.ejs
+++ b/helpers/faq.ejs
@@ -16,7 +16,7 @@
         };
     </script>
 
-    <main class="relative min-h-screen flex flex-col justify-center bg-slate-900 overflow-hidden">
+    <div class="relative min-h-screen flex flex-col justify-center bg-slate-900 overflow-hidden">
         <div class="w-full max-w-6xl mx-auto px-4 md:px-6 py-24">
     
             <!-- Cards container -->
@@ -36,7 +36,7 @@
                                 <span class="inline-flex text-3xl pb-12 font-bold text-white" src="./card-02.png" width="200" height="200" alt="Card 02" >Return & Refund</span>
                             </div>
                             <!-- Text -->
-                            <div class="grow mb-5 pt-28 pt-28">
+                            <div class="grow mb-5 pt-28 ">
                                 <h2 class="text-xl text-slate-200 font-bold mb-1">Amazing Integration</h2>
                                 <p class="text-sm text-slate-500">Quickly apply filters to refine your issues lists and create custom views.</p>
                             </div>
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </div>
-</main>
+</div>
 
     <script src="./spotlight-effect.js"></script>
 
